src/test/contracts/negative/interpreter_tests/test_decompile.mligo
let test =
  let x = Test.eval 4n in
  (Test.decompile x : string)
